--- a/index.html
+++ b/index.html
@@ -1,12 +1,250 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Title</title>
-</head>
-<body>
- <h1>Hello, Word!</h1>
- <p class="test">Test browser-sync</p>
-</body>
+<html lang="ru">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
+    <title>Водоочистительные системы Aquel</title>
+  </head>
+
+  <body>
+    <div class="container-wrapper">
+
+      <header>
+        <nav>
+          <div class="container">
+            <div class="nav-wrapper">
+              <a href="index.html" class="brand-logo">D--Q</a>
+              <a href="#" data-activates="mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+              <ul class="right  hide-on-med-and-down">
+                <li><a href="shop.html">Магазин</a></li>
+                <li><a href="aquel-tehnology.html">Технологии</a></li>
+                <li><a href="blog.html">Блог</a></li>
+                <li><a href="about.html">О Нас</a></li>
+              </ul>
+              <ul class="side-nav" id="mobile">
+                <li><a href="shop.html">Магазин</a></li>
+                <li><a href="aquel-tehnology.html">Технологии</a></li>
+                <li><a href="blog.html">Блог</a></li>
+                <li><a href="about.html">О Нас</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <main>
+
+        <section class="intro">
+          <div class="container">
+            <div class="row">
+              <div class="col  s12">
+                <h5 class="center-align  animation-fadeIn">Водоочистительные системы Aquel</h5>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <div class="divider"></div>
+
+        <section class="infographics">
+          <div class="container">
+            <div class="row">
+              <div class="col  s12">
+                <h5 class="infographics__title">Инфографика</h5>
+                <picture>
+                  <img class="infographics__img" src="https://placehold.it/500x500" alt="">
+                </picture>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <div class="divider"></div>
+
+        <section class="call-to-action">
+          <div class="container">
+            <div class="row">
+              <h5 class="call-to-action__title  center-align">Заказать консультацию</h5>
+              <p class="call-to-action__text  center-align">Получить скидку</p>
+              <form class="col  s12">
+                <div class="row">
+                  <div class="input-field  col  s12">
+                    <i class="material-icons  prefix">account_circle</i>
+                    <input id="first_name" type="text" class="validate">
+                    <label for="first_name">Имя:</label>
+                  </div>
+                  <div class="input-field  col  s12">
+                    <i class="material-icons  prefix">phone</i>
+                    <input id="last_name" type="tel" class="validate">
+                    <label for="tel">Телефон:</label>
+                  </div>
+                </div>
+                <div class="button-wrapper">
+                  <button class="btn  waves-effect  waves-light" type="submit" name="action">Консультация
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </section>
+
+        <div class="divider"></div>
+
+        <section class="showcase">
+          <div class="container">
+            <div class="row">
+              <h5 class="showcase__title  center-align">Магазин</h5>
+              <div class="col  s12">
+                <div class="card  hoverable">
+                  <div class="card-image">
+                    <img src="https://placehold.it/300x200">
+                    <span class="card-title">Продукт 1</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                  <div class="card-action">
+                    <a href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col  s12">
+                <div class="card  hoverable">
+                  <div class="card-image">
+                    <img src="https://placehold.it/300x200">
+                    <span class="card-title">Продукт 2</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                  <div class="card-action">
+                    <a href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col  s12">
+                <div class="card  hoverable">
+                  <div class="card-image">
+                    <img src="https://placehold.it/300x200">
+                    <span class="card-title">Продукт 3</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                  <div class="card-action">
+                    <a href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+
+        <div class="divider"></div>
+
+        <section class="blog-preview">
+          <div class="container">
+            <div class="row">
+              <h5 class="blog-preview__title  center-align">Блог</h5>
+              <div class="col s12">
+                <h2 class="header">title</h2>
+                <div class="card horizontal">
+                  <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/6">
+                  </div>
+                  <div class="card-stacked">
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12">
+                <h2 class="header">title</h2>
+                <div class="card horizontal">
+                  <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/7">
+                  </div>
+                  <div class="card-stacked">
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12">
+                <h2 class="header">title</h2>
+                <div class="card horizontal">
+                  <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/8">
+                  </div>
+                  <div class="card-stacked">
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+
+      </main>
+
+      <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col  l6  s12">
+              <h5 class="white-text">Footer Content</h5>
+              <p class="grey-text  text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+            <div class="col  l4  offset-l2  s12">
+              <h5 class="white-text">Links</h5>
+              <ul>
+                <li><a class="grey-text  text-lighten-3" href="#!">Link 1</a></li>
+                <li><a class="grey-text  text-lighten-3" href="#!">Link 2</a></li>
+                <li><a class="grey-text  text-lighten-3" href="#!">Link 3</a></li>
+                <li><a class="grey-text  text-lighten-3" href="#!">Link 4</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+            <span>© 2017 Deep Aqua</span>
+            <a class="grey-text  text-lighten-4  right" href="#!">More Links</a>
+          </div>
+        </div>
+      </footer>
+    </div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+
+  </body>
 </html>
