--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
   <body>
 
-    <div class="container">
+    <div class="main-container">
+
       <section class="header">
-        <nav class="navbar navbar-default">
+
+        <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
+
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -27,19 +29,18 @@
               <a class="navbar-brand" href="#">D-Q</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">О Нас<span class="sr-only">(current)</span></a></li>
+                <li><a href="#">О Нас<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Блог</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Магазин<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">Оплата и доставка</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">Гарантия и обслуживание</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li><a href="#">Сертификаты качества</a></li>
                   </ul>
                 </li>
               </ul>
@@ -47,12 +48,154 @@
 
           </div><!-- /.container-fluid -->
         </nav>
-      </section>
+      </section><!-- /.header -->
+
+      <section class="main">
+
+        <div class="introduction">
+          <h1 class="introduction__title">Лидер систем водоочистки в Европе</h1>
+          <a class="btn btn-default btn--introduction" href="#" role="button">МАГАЗИН</a>
+          <div class="introduction__img">
+            <img src="https://placehold.it/200x100" alt="" width="" height="">
+          </div>
+        </div>
+
+        <div class="infographics">
+
+            <!-- <h2 class="infographics__title">Инфографика</h1> -->
+
+              <div class="infographics__item-one">
+                <div class="infographics__item-icon glyphicon glyphicon-minus"></div>
+                <h4 class="infographics__item-title">Вы уверены?</h4>
+                <ul class="infographics__item-content">
+                  <li>1</li>
+                  <li>2</li>
+                  <li>3</li>
+                  <li>4</li>
+                </ul>
+              </div>
+              <div class="divider-main"></div>
+              <div class="infographics__item-two">
+                <div class="infographics__item-icon glyphicon glyphicon-euro"></div>
+                <h4 class="infographics__item-title">Расходы:</h4>
+                <ul class="infographics__item-content">
+                  <li>1</li>
+                  <li>2</li>
+                  <li>3</li>
+                  <li>4</li>
+                </ul>
+              </div>
+              <div class="divider-main"></div>
+              <div class="infographics__item-three">
+                <div class="infographics__item-icon glyphicon glyphicon-hand-left"></div>
+                <h4 class="infographics__item-title">Преимущества Aquel</h4>
+                <ul class="infographics__item-content">
+                  <li>1</li>
+                  <li>2</li>
+                  <li>3</li>
+                  <li>4</li>
+                </ul>
+              </div>
+              <div class="divider-main"></div>
+        </div><!-- /.infographics -->
+
+        <div class="advice">
+          <div class="container-article">
+            <h2 class="advice__title">Консультация</h1>
+            <p class="advice__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eos magni impedit, facere, consequuntur aspernatur recusandae expedita possimus qui maxime quam ad magnam deleniti aut quae eligendi illo rem quisquam!
+            </p>
+            <form class="advice__form" action="">
+              <div class="form-group">
+                <label for="first-name">Имя</label>
+                <input type="name" class="form-control" id="first-name" placeholder="Имя">
+              </div>
+              <div class="form-group">
+                <label for="tel">Телефон</label>
+                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
+              </div>
+              <div class="button-wrapper">
+                <button type="submit" class="btn btn-default">Заказать звонок</button>
+              </div>
+            </form>
+          </div>
+        </div><!-- /.advice -->
+
+        <div class="promo-video">
+
+          <div class="container-article">
+            <h2 class="promo-video__title">Презентация</h2>
+            <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" width="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+
+        </div><!-- /.promo-video -->
+
+        <div class="showcase">
+          <div class="container-article">
+            <h2 class="showcase__title">Продукция:</h2>
+            <div class="showcase__item-one">
+
+            </div>
+            <div class="showcase__item-two">
+
+            </div>
+            <div class="showcase__item-three">
+
+            </div>
+          </div>
+
+        </div><!-- /.showcase -->
+
+        <div class="blog-preview">
+
+          <div class="container-article">
+            <h2 class="blog-preview__title">Блог</h2>
+            <div class="blog-preview__item">
+
+            </div>
+            <div class="blog-preview__item">
+
+            </div>
+            <div class="blog-preview__item">
+
+            </div>
+          </div>
+
+        </div><!-- /.blog-preview -->
+
+      </section><!-- /.main -->
+
+      <section class="footer">
+
+        <div class="container-article">
+
+          <div class="footer__social">
+          <h4 class="footer__social-title">Нужна поддержка? <span class="text">Телефон:</span></h4>
+            <div class="footer__social-bar">
+              <a href="#" class="social__icon"><i class="fb-icon"></i></a>
+              <a href="#" class="social__icon"><i class="instagram-icon"></i></a>
+              <a href="#" class="social__icon"><i class="vk-icon"></i></a>
+            </div>
+          </div>
+
+          <div class="footer__links">
+
+          </div>
+
+          <div class="footer__payment">
+
+          </div>
+        </div>
+
+        <div class="footer__copyright">© 2017 Deep-Aqua</div>
+
+      </section><!-- /.footer -->
 
 
 
 
-    </div>
+
+
+    </div><!-- /.container -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
