Markup index.html

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <section class="main">
 
         <div class="introduction">
-          <h1 class="introduction__title">Лидер систем водоочистки в Европе</h1>
+          <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
           <a class="btn btn-default btn--introduction" href="#" role="button">МАГАЗИН</a>
           <div class="introduction__img">
-            <img src="https://placehold.it/200x100" alt="" width="" height="">
+            <!-- <img src="https://placehold.it/200x100" alt="" width="" height=""> -->
           </div>
         </div>
 
@@ -66,7 +66,7 @@
 
               <div class="infographics__item-one">
                 <div class="infographics__item-icon glyphicon glyphicon-minus"></div>
-                <h4 class="infographics__item-title">Вы уверены?</h4>
+                <h4 class="infographics__item-title">Покупаете воду?</h4>
                 <ul class="infographics__item-content">
                   <li>1</li>
                   <li>2</li>
@@ -96,7 +96,7 @@
                   <li>4</li>
                 </ul>
               </div>
-              <div class="divider-main"></div>
+
         </div><!-- /.infographics -->
 
         <div class="advice">
@@ -114,50 +114,123 @@
                 <input type="tel" class="form-control" id="tel" placeholder="Телефон">
               </div>
               <div class="button-wrapper">
-                <button type="submit" class="btn btn-default">Заказать звонок</button>
+                <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
               </div>
             </form>
           </div>
         </div><!-- /.advice -->
 
-        <div class="promo-video">
+        <div class="showcase">
 
           <div class="container-article">
-            <h2 class="promo-video__title">Презентация</h2>
-            <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" width="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+            <h2 class="showcase__title">Фильтрующие системы</h2>
+            <p class="showcase__sub-title">Познакомьтесь с технологиями Aquel</p>
+
+            <div class="showcase__item-one">
+              <div class="showcase__item-thumbnail">
+                <img src="img/small-aquel-1000.png" width=""  height="" alt="">
+              </div>
+              <div class="showcase__item-footer">
+                <div class="showcase__item-details">
+                  <h3 class="showcase__item-title">Aquel 1000</h>
+                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
+                </div>
+                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
+              </div>
+            </div>
+
+            <div class="showcase__item-two">
+              <div class="showcase__item-thumbnail">
+                <img src="img/small-aquel-zero.png" width="" height="" alt="">
+              </div>
+              <div class="showcase__item-footer">
+                <div class="showcase__item-details">
+                  <h3 class="showcase__item-title">Aquel Zero</h>
+                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
+                </div>
+                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
+              </div>
+            </div>
+
+            <div class="showcase__item-three">
+              <div class="showcase__item-thumbnail">
+                <img src="img/small-aquel-200.png" width="" height="" alt="">
+              </div>
+              <div class="showcase__item-footer">
+                <div class="showcase__item-details">
+                  <h3 class="showcase__item-title">Aquel 200</h>
+                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
+                </div>
+                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
+              </div>
+            </div>
+          </div>
+        </div><!-- /.showcase -->
+
+        <div class="promo-video">
+
+          <h2 class="promo-video__title">Презентация</h2>
+          <div class="promo__video">
+            <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
 
         </div><!-- /.promo-video -->
 
-        <div class="showcase">
-          <div class="container-article">
-            <h2 class="showcase__title">Продукция:</h2>
-            <div class="showcase__item-one">
+        <div class="blog-preview">
 
-            </div>
-            <div class="showcase__item-two">
+          <h2 class="blog-preview__title">Блог</h2>
 
-            </div>
-            <div class="showcase__item-three">
-
+          <div class="blog-preview__item">
+            <div class="card">
+              <div class="card-image">
+                <img src="https://placehold.it/260x200">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
             </div>
           </div>
 
-        </div><!-- /.showcase -->
+          <div class="blog-preview__item">
 
-        <div class="blog-preview">
-
-          <div class="container-article">
-            <h2 class="blog-preview__title">Блог</h2>
-            <div class="blog-preview__item">
-
+            <div class="card">
+              <div class="card-image">
+                <img src="https://placehold.it/260x200">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
             </div>
-            <div class="blog-preview__item">
 
-            </div>
-            <div class="blog-preview__item">
+          </div>
 
+          <div class="blog-preview__item">
+
+            <div class="card">
+              <div class="card-image">
+                <img src="https://placehold.it/260x200">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
             </div>
+
           </div>
 
         </div><!-- /.blog-preview -->
