Aquel-tehnology.html

--- a/shop.html
+++ b/shop.html
@@ -38,12 +38,13 @@
                     <li role="separator" class="divider"></li>
                     <li><a href="shop.html">Продукция</a></li>
                     <li role="separator" class="divider"></li>
+                    <li><a href="aquel-tehnology.html">Технологии</a></li>
+                    <li role="separator" class="divider"></li>
                     <li><a href="#">Оплата и доставка</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Гарантия и обслуживание</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Сертификаты качества</a></li>
-                    <li role="separator" class="divider"></li>
                   </ul>
                 </li>
                 <li><a href="#">Блог</a></li>
@@ -118,11 +119,11 @@
           <div class="container-article">
             <form class="advice__form" action="">
               <div class="form-group">
-                <label for="first-name">Имя</label>
-                <input type="name" class="form-control" id="first-name" placeholder="Имя">
+                <label class="label-first" for="first-name">Имя</label>
+                <input type="text" class="form-control" id="first-name" placeholder="Имя">
               </div>
               <div class="form-group">
-                <label for="tel">Телефон</label>
+                <label class="label-two" for="tel">Телефон</label>
                 <input type="tel" class="form-control" id="tel" placeholder="Телефон">
               </div>
             </form>
