--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Водоочистительные системы Aquel</title>
+    <title>О Нас</title>
   </head>
 
   <body>
@@ -26,11 +26,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="#">D-Q</a>
+              <a class="navbar-brand animation-pulse" href="index.html">D-Q</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
+                <li><a href="index.html">Главная</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Магазин<span class="caret"></span></a>
                   <ul class="dropdown-menu">
@@ -57,195 +58,7 @@
 
       <section class="main">
 
-        <div class="introduction">
-          <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
-          <span class="aquel-title">Aquel</span>
-          <a class="btn btn-default btn--introduction" href="shop.html" role="button">МАГАЗИН</a>
-          <div class="introduction__img">
-            <!-- <img src="https://placehold.it/200x100" alt="" width="" height=""> -->
-          </div>
-        </div>
 
-        <div class="infographics">
-
-            <!-- <h2 class="infographics__title">Инфографика</h1> -->
-
-              <div class="infographics__item-one">
-                <div class="infographics__item-icon glyphicon glyphicon-thumbs-down"></div>
-                <h4 class="infographics__item-title">Покупаете воду?</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-              <div class="divider-main"></div>
-              <div class="infographics__item-two">
-                <div class="infographics__item-icon glyphicon glyphicon-rub"></div>
-                <h4 class="infographics__item-title">Расходы:</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-              <div class="divider-main"></div>
-              <div class="infographics__item-three">
-                <div class="infographics__item-icon glyphicon glyphicon-thumbs-up"></div>
-                <h4 class="infographics__item-title">Преимущества Aquel</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-
-        </div><!-- /.infographics -->
-
-        <div class="advice">
-
-          <div class="container-article">
-            <h2 class="advice__title">Консультация</h1>
-            <p class="advice__content">Text</p>
-            <p class="advice__content">Text</p>
-          </div>
-          <div class="container-article">
-            <form class="advice__form" action="">
-              <div class="form-group">
-                <label class="label-first" for="first-name">Имя</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Имя">
-              </div>
-              <div class="form-group">
-                <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
-              </div>
-            </form>
-          </div>
-          <div class="button-wrapper">
-            <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
-          </div>
-
-        </div><!-- /.advice -->
-
-        <div class="showcase">
-
-          <div class="container-article">
-
-            <h2 class="showcase__title">Фильтрующие системы</h2>
-            <p class="showcase__sub-title">Познакомьтесь с технологиями Aquel</p>
-
-            <div class="showcase__item-one">
-              <div class="showcase__item-thumbnail hover">
-                <img src="img/small-aquel-1000.png" width=""  height="" alt="">
-              </div>
-              <div class="showcase__item-footer">
-                <div class="showcase__item-details">
-                  <h3 class="showcase__item-title">Aquel 1000</h>
-                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
-                </div>
-                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
-              </div>
-            </div>
-
-            <div class="showcase__item-two">
-              <div class="showcase__item-thumbnail hover">
-                <img src="img/small-aquel-zero.png" width="" height="" alt="">
-              </div>
-              <div class="showcase__item-footer">
-                <div class="showcase__item-details">
-                  <h3 class="showcase__item-title">Aquel Zero</h>
-                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
-                </div>
-                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
-              </div>
-            </div>
-
-            <div class="showcase__item-three">
-              <div class="showcase__item-thumbnail hover">
-                <img src="img/small-aquel-200.png" width="" height="" alt="">
-              </div>
-              <div class="showcase__item-footer">
-                <div class="showcase__item-details">
-                  <h3 class="showcase__item-title">Aquel 200</h>
-                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
-                </div>
-                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
-              </div>
-            </div>
-          </div>
-        </div><!-- /.showcase -->
-
-        <div class="promo-video">
-
-          <h2 class="promo-video__title">Презентация</h2>
-          <div class="promo__video">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-          </div>
-
-        </div><!-- /.promo-video -->
-
-        <div class="blog-preview">
-
-          <h2 class="blog-preview__title">Блог</h2>
-
-          <div class="blog-preview__item">
-            <div class="card hover">
-              <div class="card-image">
-                <img src="https://placehold.it/260x200">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="blog-preview__item">
-
-            <div class="card hover">
-              <div class="card-image">
-                <img src="https://placehold.it/260x200">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="blog-preview__item">
-
-            <div class="card hover">
-              <div class="card-image">
-                <img src="https://placehold.it/260x200">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-
-          </div>
-
-        </div><!-- /.blog-preview -->
 
       </section><!-- /.main -->
 
