js animation fadein

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
         <div class="introduction">
           <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
-          <span class="aquel-title">Aquel</span>
-          <a class="btn btn-default btn--introduction" href="shop.html" role="button">МАГАЗИН</a>
+          <span class="aquel-title animation-fadeIn">Aquel</span>
           <div class="introduction__img">
             <!-- <img src="https://placehold.it/200x100" alt="" width="" height=""> -->
           </div>
@@ -70,7 +69,7 @@
 
             <!-- <h2 class="infographics__title">Инфографика</h1> -->
 
-              <div class="infographics__item-one">
+              <div class="infographics__item-one slideinleft-post">
                 <div class="infographics__item-icon glyphicon glyphicon-thumbs-down"></div>
                 <h4 class="infographics__item-title">Покупаете воду?</h4>
                 <ul class="infographics__item-content">
@@ -130,57 +129,8 @@
 
         </div><!-- /.advice -->
 
-        <div class="showcase">
-
-          <div class="container-article">
-
-            <h2 class="showcase__title">Фильтрующие системы</h2>
-            <p class="showcase__sub-title">Познакомьтесь с технологиями Aquel</p>
-
-            <div class="showcase__item-one">
-              <div class="showcase__item-thumbnail hover">
-                <img src="img/small-aquel-1000.png" width=""  height="" alt="">
-              </div>
-              <div class="showcase__item-footer">
-                <div class="showcase__item-details">
-                  <h3 class="showcase__item-title">Aquel 1000</h>
-                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
-                </div>
-                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
-              </div>
-            </div>
-
-            <div class="showcase__item-two">
-              <div class="showcase__item-thumbnail hover">
-                <img src="img/small-aquel-zero.png" width="" height="" alt="">
-              </div>
-              <div class="showcase__item-footer">
-                <div class="showcase__item-details">
-                  <h3 class="showcase__item-title">Aquel Zero</h>
-                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
-                </div>
-                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
-              </div>
-            </div>
-
-            <div class="showcase__item-three">
-              <div class="showcase__item-thumbnail hover">
-                <img src="img/small-aquel-200.png" width="" height="" alt="">
-              </div>
-              <div class="showcase__item-footer">
-                <div class="showcase__item-details">
-                  <h3 class="showcase__item-title">Aquel 200</h>
-                  <span class="showcase__item-price glyphicon glyphicon-rub">44980</span>
-                </div>
-                <a class="btn btn-default btn--buy" href="#" role="button">КУПИТЬ</a>
-              </div>
-            </div>
-          </div>
-        </div><!-- /.showcase -->
-
         <div class="promo-video">
 
-          <h2 class="promo-video__title">Презентация</h2>
           <div class="promo__video">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -189,63 +139,13 @@
 
         </div><!-- /.promo-video -->
 
-        <div class="blog-preview">
-
-          <h2 class="blog-preview__title">Блог</h2>
-
-          <div class="blog-preview__item">
-            <div class="card hover">
-              <div class="card-image">
-                <img src="https://placehold.it/260x200">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-              </div>
-            </div>
+        <div class="welcome-to-shop fadein-post">
+          <h2 class="welcome-to-shop__title">Добро пожаловать!</h2>
+          <p class="welcome-to-shop__subtitle">В мир чистой питьевой воды</p>
+          <div class="button-wrapper">
+            <a class="btn btn-default btn--welcome-to-shop" href="shop.html" role="button">МАГАЗИН</a>
           </div>
-
-          <div class="blog-preview__item">
-
-            <div class="card hover">
-              <div class="card-image">
-                <img src="https://placehold.it/260x200">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="blog-preview__item">
-
-            <div class="card hover">
-              <div class="card-image">
-                <img src="https://placehold.it/260x200">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-
-          </div>
-
-        </div><!-- /.blog-preview -->
+        </div>
 
       </section><!-- /.main -->
 
