--- a/shop.html
+++ b/shop.html
@@ -109,31 +109,6 @@
 
         </div><!-- /.shop-showcase -->
 
-        <div class="advice">
-
-          <div class="container-article">
-            <h2 class="advice__title">Консультация</h1>
-            <p class="advice__content">Text</p>
-            <p class="advice__content">Text</p>
-          </div>
-          <div class="container-article">
-            <form class="advice__form" action="">
-              <div class="form-group">
-                <label class="label-first" for="first-name">Имя</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Имя">
-              </div>
-              <div class="form-group">
-                <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
-              </div>
-            </form>
-          </div>
-          <div class="button-wrapper">
-            <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
-          </div>
-
-        </div><!-- /.advice -->
-
         <div class="feature">
           <div class="container-article">
 
@@ -170,8 +145,38 @@
           </div>
         </div><!-- /.feature -->
 
+        <div class="advice">
 
+          <div class="container-article">
+            <h2 class="advice__title">Консультация</h1>
+            <p class="advice__content">Text</p>
+            <p class="advice__content">Text</p>
+          </div>
+          <div class="container-article">
+            <form class="advice__form" action="">
+              <div class="form-group">
+                <label class="label-first" for="first-name">Имя</label>
+                <input type="text" class="form-control" id="first-name" placeholder="Имя">
+              </div>
+              <div class="form-group">
+                <label class="label-two" for="tel">Телефон</label>
+                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
+              </div>
+            </form>
+          </div>
+          <div class="button-wrapper">
+            <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
+          </div>
 
+        </div><!-- /.advice -->
+
+        <div class="infobar">
+          <ul class="infobar__list">
+            <li class="infobar__list-item"><a href="">Узнайте о доставке</a></li>
+            <li class="infobar__list-item"><a href="shop.html">Посетите магазин</a></li>
+            <li class="infobar__list-item"><a href="">Узнайте о гарантии</a></li>
+          </ul>
+        </div>
 
       </section><!-- /.main -->
 
