Animation material design start

--- a/about.html
+++ b/about.html
@@ -32,23 +32,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">Главная</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Магазин<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li role="separator" class="divider"></li>
-                    <li><a href="shop.html">Продукция</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="aquel-tehnology.html">Технологии</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Оплата и доставка</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Гарантия и обслуживание</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Сертификаты качества</a></li>
-                  </ul>
-                </li>
+                <li><a href="shop.html">Магазин</a></li>
+                <li><a href="aquel-tehnology.html">Технологии</a></li>
+                <li class="active-nav"><a href="#">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
-                <li><a href="#">О Нас<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -92,11 +79,9 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
+              <li><a href="#">Договор оферта</a></li>
+              <li><a href="#">Сертификаты качества</a></li>
+              <li><a href="#">Политика конфиденциальности</a></li>
             </ul>
           </div>
 
