--- a/index.html
+++ b/index.html
@@ -31,23 +31,10 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Магазин<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li role="separator" class="divider"></li>
-                    <li><a href="shop.html">Продукция</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="aquel-tehnology.html">Технологии</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Оплата и доставка</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Гарантия и обслуживание</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Сертификаты качества</a></li>
-                  </ul>
-                </li>
+                <li><a href="shop.html">Магазин</a></li>
+                <li><a href="aquel-tehnology.html">Технологии</a></li>
+                <li><a href="#">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
-                <li><a href="#">О Нас<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -59,9 +46,9 @@
 
         <div class="introduction">
           <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
-          <span class="aquel-title animation-fadeIn">Aquel</span>
+          <span class="introduction__aquel-title animation-fadeIn">Aquel</span>
           <div class="introduction__img">
-            <!-- <img src="https://placehold.it/200x100" alt="" width="" height=""> -->
+
           </div>
         </div>
 
@@ -69,7 +56,7 @@
 
             <!-- <h2 class="infographics__title">Инфографика</h1> -->
 
-              <div class="infographics__item-one slideinleft-post">
+              <div class="infographics__item-one">
                 <div class="infographics__item-icon glyphicon glyphicon-thumbs-down"></div>
                 <h4 class="infographics__item-title">Покупаете воду?</h4>
                 <ul class="infographics__item-content">
@@ -147,6 +134,14 @@
           </div>
         </div>
 
+        <div class="infobar">
+          <ul class="infobar__list">
+            <li class="infobar__list-item"><a href="">Узнайте о доставке</a></li>
+            <li class="infobar__list-item"><a href="shop.html">Посетите магазин</a></li>
+            <li class="infobar__list-item"><a href="">Узнайте о гарантии</a></li>
+          </ul>
+        </div>
+
       </section><!-- /.main -->
 
       <section class="footer">
@@ -179,11 +174,9 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
-              <li><a href="#">Text</a></li>
+              <li><a href="#">Договор оферта</a></li>
+              <li><a href="#">Сертификаты качества</a></li>
+              <li><a href="#">Политика конфиденциальности</a></li>
             </ul>
           </div>
 
