Single product start

--- a/aquel-1000.html
+++ b/aquel-1000.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>О Нас</title>
+    <title>Технологии очистки воды Aquel</title>
   </head>
 
   <body>
@@ -34,7 +34,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="shop.html">Магазин</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
-                <li class="active-nav"><a href="about.html">О Нас</a></li>
+                <li><a href="about.html">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -45,9 +45,29 @@
 
       <section class="main">
 
-        <div class="introduction introduction--about-us">
-          <h1 class="introduction__title animation-fadeIn">О Нас</h1>
-          <span class="introduction__aquel-title animation-fadeIn"></span>
+        <div class="single-product">
+          <div class="container-article">
+            <h2 class="single-product__title">Aquel 1000</h2>
+            <p class="single-product__content">Идеально для дома и офиса</p>
+            <div class="single-product__img">
+              <img src="img/small-aquel-1000.png" width="" height="" alt="">
+            </div>
+            <div class="button-wrapper">
+              <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
+            </div>
+          </div>
+        </div><!-- /.single-product -->
+
+        <div class="advantages">
+
+        </div>
+
+        <div class="infobar">
+          <ul class="infobar__list">
+            <li class="infobar__list-item"><a href="">Узнайте о доставке</a></li>
+            <li class="infobar__list-item"><a href="shop.html">Посетите магазин</a></li>
+            <li class="infobar__list-item"><a href="">Узнайте о гарантии</a></li>
+          </ul>
         </div>
 
       </section><!-- /.main -->
