--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">D-A</a>
+              <a class="navbar-brand animation-pulse" href="index.html">DEEP-AQUA</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -85,7 +85,7 @@
                 <li>Круглосуточно</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
                 <li>Консультация:</li>
-                <li>8:00 - 19:00</li>
+                <li>9:00 - 19:00</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
                 <li>Монтаж и обслуживание:</li>
                 <li>По согласованию</li>
@@ -130,6 +130,14 @@
           </div>
         </div>
 
+        <div class="infobar">
+          <ul class="infobar__list">
+            <li class="infobar__list-item"><a href="payment-and-shipping.html">Оплата и доставка</a></li>
+            <li class="infobar__list-item"><a href="shop.html">Каталог</a></li>
+            <li class="infobar__list-item"><a href="">Гарантия и обслуживание</a></li>
+          </ul>
+        </div>
+
       </section><!-- /.main -->
 
       <section class="footer">
@@ -163,8 +171,8 @@
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
               <li><a href="#">Договор оферта</a></li>
-              <li><a href="#">Сертификаты качества</a></li>
-              <li><a href="#">Политика конфиденциальности</a></li>
+              <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
+              <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
             </ul>
           </div>
 
