--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Фильтр для воды Aquel 1000</title>
+    <title>Политика конфиденциальности</title>
   </head>
 
   <body>
@@ -45,77 +45,54 @@
 
       <section class="main">
 
-        <div class="single-product">
+        <div class="introduction introduction--privacy-police">
+          <h1 class="introduction__title animation-fadeIn">Политика конфиденциальности</h1>
+          <p class="introduction__content introduction__content--payment-and-shipping animation-fadeIn">Мы защищаем Ваши данные</p>
+          <span class="introduction__aquel-title animation-fadeIn">
+            <svg version="1.1" width="100" height="100" x="0px" y="0px" viewBox="0 0 511.996 511.996" xml:space="preserve">
+              <g>
+                <path d="M256.004,159.996c-17.641,0-32,14.359-32,32v32h64v-32C288.004,174.355,273.645,159.996,256.004,159.996z"/>
+                <path d="M461.832,3.145c-11.111-5.328-24.266-3.797-33.893,3.922c-39.982,32.141-111.951,32.125-151.873,0.016
+                c-11.719-9.438-28.406-9.422-40.125-0.016C195.975,39.207,123.975,39.191,84.068,7.082c-9.611-7.734-22.81-9.266-33.877-3.938
+                C39.086,8.457,32.008,19.691,32.008,32.004l-0.016,256c0,100.297,80.406,183.555,215.074,222.727
+                c2.922,0.844,5.922,1.266,8.939,1.266c3.014,0,6.016-0.422,8.938-1.266c134.67-39.172,215.061-122.414,215.061-222.727v-256
+                C480.004,19.691,472.941,8.457,461.832,3.145z M352.004,319.996c0,17.68-14.326,32-32,32h-128c-17.674,0-32-14.32-32-32v-64
+                c0-17.672,14.326-32,32-32v-32c0-35.281,28.703-64,64-64c35.297,0,64,28.719,64,64v32c17.674,0,32,14.328,32,32V319.996z"/>
+                <path d="M256.004,271.996c-8.836,0-16,7.164-16,16c0,8.844,7.164,16,16,16c8.836,0,16-7.156,16-16
+                C272.004,279.16,264.84,271.996,256.004,271.996z"/>
+              </g>
+            </svg>
+          </span>
+        </div>
+
+        <div class="privacy-police">
           <div class="container-article">
 
-            <div class="single-product__content-block">
-              <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">Aquel 1000</h2>
-              <p class="single-product__content">Идеально для дома и офиса</p>
-              <p class="single-product__content">Бесплатная доставка, 7-10 дней</p>
-              <p class="single-product__content">Монтаж за наш счет в 31 городе РФ</p>
-            </div>
-            <div class="single-product__img-block">
-              <img class="single-product__img" src="img/small-aquel-1000.png" alt="">
-            </div>
-            <div class="single-product__button-wrapper">
-              <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
+            <div class="privacy-police-card">
+              <h2 class="privacy-police__title">Использование персональных данных</h2>
+              <div class="divider-main divider-main--card"></div>
+              <p class="privacy-police__content">DeepAqua.ru использует полученную от Вас информацию, такую как имя и фамилия, адрес, адрес электронной почты, номер телефона, исключительно c той целью, с которой Вы ее предоставляете (для осуществления идентификации покупателя, обеспечения приема платежей, доставки и т.п.). DeepAqua.ru использует полученную информацию исключительно с целью повышения качества предоставляемых Вам услуг. Полученные DeepAqua.ru персональные данные используются исключительно в рамках компании DeepAqua.ru и/или ее коммерческих партнеров с целью удовлетворения Ваших требований. DeepAqua.ru обеспечивает защиту персональных данных, полученных при осуществлении деятельности данного интернет-сайта, в полном соответствии с действующими на территории хостинга интернет-сайта законами.</p>
             </div>
 
-          </div>
-        </div><!-- /.single-product -->
-
-        <div class="advantages">
-          <div class="container-article">
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#description" aria-controls="description" role="tab" data-toggle="tab">Описание</a></li>
-              <li role="presentation"><a href="#feature" aria-controls="feature" role="tab" data-toggle="tab">Характеристики</a></li>
-              <li role="presentation"><a href="#advantages" aria-controls="advantages" role="tab" data-toggle="tab">Преимущества</a></li>
-              <li role="presentation"><a href="#delivery" aria-controls="delivery" role="tab" data-toggle="tab">Доставка</a></li>
-            </ul>
-
-            <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>Aquel 1000</strong> создан с использованием новейших технологий, гарантирует самое высокое качество очистки питьевой воды. Водоочистительное устройство имеет гарантию 5 лет, может быть установлено на столешницу кухни, в офисе или в любом удобном для Вас месте. Сервисное обслуживание раз в 10 месяцев, для контролирования и поддержания технических показателей. Aquel 1000 произведен в Чехии эксклюзивно по заказу компании Aquel с патентами на фильтрующие элементы и все модификации системы.</p></div>
-              <div role="tabpanel" class="tab-pane fade" id="feature">
-                <p>
-                  <ul>
-                    <li>Эффективность мембраны 98%</li>
-                    <li>Контроль минерализации</li>
-                    <li>Датчик утечки воды</li>
-                    <li>Ультрафиолетовая лампа 6 Вт</li>
-                    <li>Накопительный бак 8 литров</li>
-                    <li>Электронное оповещение о сервисном обслуживании</li>
-                    <li>Размеры:
-                      <ul>
-                        <li>высота: 445 мм.</li>
-                        <li>ширина: 360 мм.</li>
-                        <li>глубина: 370 мм.</li>
-                      </ul>
-                    </li>
-                  </ul>
-                </p>
-              </div>
-              <div role="tabpanel" class="tab-pane fade" id="advantages">
-                  <p>
-                    <ul>
-                      <li>Компактный, стильный дизайн</li>
-                      <li>Индикация всего фильтра, контроль срока эксплуатации</li>
-                      <li>Значения качества фильтрации воды</li>
-                      <li>Измерение давления воды, автоматический выбор режима работы</li>
-                      <li>Мощность оборудования  100 литров чистой воды в сутки</li>
-                    </ul>
-                  </p>
-              </div>
-
-              <div role="tabpanel" class="tab-pane fade" id="delivery">
-                <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
-                </p>
-                <p>Фильтр <strong>Aquel 1000</strong> может быть доставлен и смонтирован в следующих городах:</p>
-                <p class="advantages__delivery-content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.</p>
-              </div>
-
+            <div class="privacy-police-card">
+              <h2 class="privacy-police__title">Технологии</h2>
+              <div class="divider-main divider-main--card"></div>
+              <p class="privacy-police__content">DeepAqua.ru использует интернет-технологии (например, сохранение данных на компьютере посетителя - Cookies, язык сценариев Java Script, протокол безопасности при передаче данных SSL) исключительно в целях улучшения предлагаемых Вам интернет-услуг. В целях повышения эффективности работы данного интернет-сайта DeepAqua.ru осуществляет автоматический сбор некоторого объема сведений (например, используемые при посещении данного интернет-сайта браузер, операционную систему, количество нажатий, средняя продолжительность пребывания посетителя на данном интернет-сайте, пол, возраст, демографические данные и т.п.).</p>
             </div>
+
+            <div class="privacy-police-card">
+              <h2 class="privacy-police__title">Безопасность</h2>
+              <div class="divider-main divider-main--card"></div>
+              <p class="privacy-police__content">DeepAqua.ru гарантирует защиту полученных персональных данных от утери, повреждения, не упомянутого в данном документе использования, а также в полном соответствии с действующими на территории хостинга интернет-сайта законами от несанкционированного доступа к личной информации.</p>
+            </div>
+
+            <div class="privacy-police-card">
+              <h2 class="privacy-police__title">Вопросы по защите персональных данных</h2>
+              <div class="divider-main divider-main--card"></div>
+              <p class="privacy-police__content">Если у Вас возникнут вопросы или замечания по обеспечению конфиденциальности персональных данных со стороны DeepAqua.ru, обращайтесь по адресу <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a>. По первому требованию с Вашей стороны переданные Вами персональные данные будут удалены из нашей базы. DeepAqua.ru оставляет за собой право пересматривать порядок и условия обеспечения конфиденциальности персональных данных путем обновления данного текста на интернет-сайте.</p>
+              <p class="privacy-police__content">Интернет-магазин DeepAqua.ru принадлежит и управляется ООО "Айнова", компания не хранит на своих серверах информацию о банковских картах покупателей, данная информация обрабатывается АО "Тинькофф Банк".</p>
+            </div>
+
           </div>
         </div>
 
