--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">D-A</a>
+              <a class="navbar-brand animation-pulse" href="index.html">DEEP-AQUA</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -160,7 +160,7 @@
 
         <div class="infobar">
           <ul class="infobar__list">
-            <li class="infobar__list-item"><a href="">Оплата и доставка</a></li>
+            <li class="infobar__list-item"><a href="payment-and-shipping.html">Оплата и доставка</a></li>
             <li class="infobar__list-item"><a href="shop.html">Каталог</a></li>
             <li class="infobar__list-item"><a href="">Гарантия и обслуживание</a></li>
           </ul>
@@ -199,8 +199,8 @@
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
               <li><a href="#">Договор оферта</a></li>
-              <li><a href="#">Сертификаты качества</a></li>
-              <li><a href="#">Политика конфиденциальности</a></li>
+              <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
+              <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
             </ul>
           </div>
 
