--- a/certificate-of-quality.html
+++ b/certificate-of-quality.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Фильтр для воды Aquel 1000</title>
+    <title>Сертификаты качества продукции Aquel</title>
   </head>
 
   <body>
@@ -45,77 +45,64 @@
 
       <section class="main">
 
-        <div class="single-product">
+        <div class="introduction introduction--privacy-police">
+          <h1 class="introduction__title animation-fadeIn">Сертификаты качества</h1>
+          <p class="introduction__content introduction__content--payment-and-shipping animation-fadeIn">Мы уверены в наших фильтрах</p>
+          <span class="introduction__aquel-title animation-fadeIn">
+            <svg version="1.1" width="100" height="100" viewBox="0 0 489.6 489.6">
+              <g>
+                <g>
+                  <path d="m404.35,297.5c27.1-22.3 43.6-55.5 43.6-91.3 0-30.9-11.3-58.9-30.2-79.7v-116.1c0-6.3-4.2-10.4-10.4-10.4h-363.6c-6.3,0-10.4,4.2-10.4,10.4v468.8c0,6.3 4.2,10.4 10.4,10.4h363.5c5.2,0 10.4-4.2 10.4-10.4v-58.6l38.6-13.3-51.9-109.8zm23.8-91.3c-0.1,38.6-21.9,73-56.3,88.6-12.5,5.2-26,8.3-40.6,8.3-53.1,0-96.9-43.8-96.9-96.9s43.8-96.9 96.9-96.9 95.8,42.7 96.9,96.9zm-136.3,110.1l-21.1,93-40.6-14.5 42.2-87.3c6.2,3.5 12.7,6.5 19.5,8.8zm105,152.5h-342.7v-448h342.7v87.6c-18.6-12.6-41.1-19.9-65.6-19.9-27.2,0-52.1,9.1-71.9,24.4v-0.5h-138.6v20.8h118c-15.8,20.1-25.3,45.5-25.3,72.9 0,9.7 1.2,19.1 3.4,28.1h-96.1v20.8h103.4c7.2,15.6 17.7,29.2 30.7,40.2l-28.8,60.9h-105.3v20.8h95.5l-14.3,30.2 84.4,29.2 26.3-115c6,0.9 12.2,1.4 18.5,1.4 4.8,0 9.7-0.3 14.5-0.8l26.2,114.3 25-8.6v41.2zm-9.4-59.4l-20.7-91.4c4.3-1.2 17.6-7 20.2-8.5l41.1,85.3-40.6,14.6z"/>
+                  <path d="m306.15,170.9l-54.2,8.3 39.6,38.5-9.4,54.2 49-24 47.9,25-9.3-54.1 38.5-39.6-54.2-8.3-23.9-49-24,49zm35.4,19.8l22.9,3.1-16.7,16.7 4.3,22.8-20.8-10.4-20.8,11.5 4.2-24-16.8-16.6 22.9-3.1 10.4-20.8 10.4,20.8z"/>
+                </g>
+              </g>
+            </svg>
+          </span>
+        </div>
+
+        <div class="certificate">
           <div class="container-article">
 
-            <div class="single-product__content-block">
-              <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">Aquel 1000</h2>
-              <p class="single-product__content">Идеально для дома и офиса</p>
-              <p class="single-product__content">Бесплатная доставка, 7-10 дней</p>
-              <p class="single-product__content">Монтаж за наш счет в 31 городе РФ</p>
-            </div>
-            <div class="single-product__img-block">
-              <img class="single-product__img" src="img/small-aquel-1000.png" alt="">
-            </div>
-            <div class="single-product__button-wrapper">
-              <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
-            </div>
-
-          </div>
-        </div><!-- /.single-product -->
-
-        <div class="advantages">
-          <div class="container-article">
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#description" aria-controls="description" role="tab" data-toggle="tab">Описание</a></li>
-              <li role="presentation"><a href="#feature" aria-controls="feature" role="tab" data-toggle="tab">Характеристики</a></li>
-              <li role="presentation"><a href="#advantages" aria-controls="advantages" role="tab" data-toggle="tab">Преимущества</a></li>
-              <li role="presentation"><a href="#delivery" aria-controls="delivery" role="tab" data-toggle="tab">Доставка</a></li>
-            </ul>
-
-            <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>Aquel 1000</strong> создан с использованием новейших технологий, гарантирует самое высокое качество очистки питьевой воды. Водоочистительное устройство имеет гарантию 5 лет, может быть установлено на столешницу кухни, в офисе или в любом удобном для Вас месте. Сервисное обслуживание раз в 10 месяцев, для контролирования и поддержания технических показателей. Aquel 1000 произведен в Чехии эксклюзивно по заказу компании Aquel с патентами на фильтрующие элементы и все модификации системы.</p></div>
-              <div role="tabpanel" class="tab-pane fade" id="feature">
-                <p>
-                  <ul>
-                    <li>Эффективность мембраны 98%</li>
-                    <li>Контроль минерализации</li>
-                    <li>Датчик утечки воды</li>
-                    <li>Ультрафиолетовая лампа 6 Вт</li>
-                    <li>Накопительный бак 8 литров</li>
-                    <li>Электронное оповещение о сервисном обслуживании</li>
-                    <li>Размеры:
-                      <ul>
-                        <li>высота: 445 мм.</li>
-                        <li>ширина: 360 мм.</li>
-                        <li>глубина: 370 мм.</li>
-                      </ul>
-                    </li>
-                  </ul>
-                </p>
+            <div class="certificate-card">
+              <h2 class="certificate__title">Заключение часть 1</h2>
+              <div class="divider-main divider-main--card"></div>
+              <div class="certificate__img">
+                <img src="img/certificate/Ekspertnoe_zakljuchenie.jpg" alt="">
               </div>
-              <div role="tabpanel" class="tab-pane fade" id="advantages">
-                  <p>
-                    <ul>
-                      <li>Компактный, стильный дизайн</li>
-                      <li>Индикация всего фильтра, контроль срока эксплуатации</li>
-                      <li>Значения качества фильтрации воды</li>
-                      <li>Измерение давления воды, автоматический выбор режима работы</li>
-                      <li>Мощность оборудования  100 литров чистой воды в сутки</li>
-                    </ul>
-                  </p>
-              </div>
-
-              <div role="tabpanel" class="tab-pane fade" id="delivery">
-                <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
-                </p>
-                <p>Фильтр <strong>Aquel 1000</strong> может быть доставлен и смонтирован в следующих городах:</p>
-                <p class="advantages__delivery-content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.</p>
-              </div>
-
             </div>
+
+            <div class="certificate-card">
+              <h2 class="certificate__title">Заключение часть 2</h2>
+              <div class="divider-main divider-main--card"></div>
+              <div class="certificate__img">
+                <img src="img/certificate/Ekspertnoe_zakljuchenie-2.jpg" alt="">
+              </div>
+            </div>
+
+            <div class="certificate-card">
+              <h2 class="certificate__title">Приложение к заключению часть 1</h2>
+              <div class="divider-main divider-main--card"></div>
+              <div class="certificate__img">
+                <img src="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju.jpg" alt="">
+              </div>
+            </div>
+
+            <div class="certificate-card">
+              <h2 class="certificate__title">Приложение к заключению часть 1</h2>
+              <div class="divider-main divider-main--card"></div>
+              <div class="certificate__img">
+                <img src="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju_2.jpg" alt="">
+              </div>
+            </div>
+
+            <div class="certificate-card">
+              <h2 class="certificate__title">Декларация о соответствии</h2>
+              <div class="divider-main divider-main--card"></div>
+              <div class="certificate__img">
+                <img src="img/certificate/Declaration of conformity.jpg" alt="">
+              </div>
+            </div>
+
           </div>
         </div>
 
